# VFB_connect

./: .gitignore  .readthedocs.yaml  .travis.yaml  .travis.yml  README.md  direct_version.py  get_version.py  pyproject.toml  requirements.txt  run_all_tests.py  run_fast_tests.py  setup.py  setup.py.backup  test_version.py  verify_version.py
.github/workflows/: check_queries.yml  docs.yml  publish-to-pypi.yml  requirements.txt  test_notebooks.yml  test_vfb-connect.yml
doc/: json_schema_visual_doc.md
doc/vfb_connect/: cross_server_tools.md  default_servers.md  index.md
doc/vfb_connect/neo/: index.md  neo4j_tools.md  query_wrapper.md
doc/vfb_connect/neo/test/: index.md  neo_tools_tests.md
doc/vfb_connect/owl/: index.md  owlery_query_tools.md
doc/vfb_connect/owl/test/: index.md  query_tools_test.md
doc/vfb_connect/test/: cross_server_tools_test.md  index.md
docs/: requirements.txt
docs/source/: API_reference.md  API_reference.rst  IDs_on_VFB.md  Semantic_queries.rst  conf.py  index.md  index.rst  modules.rst  neo.rst  neo.test.rst  output_fomats.md  output_fomats.rst  output_formats.md  output_formats.rst  owl.rst  vfb_connect.neo.rst  vfb_connect.neo.test.rst  vfb_connect.owl.rst  vfb_connect.rst  vfb_term.rst  vfbterm.md
docs/source/tutorials/: connectomics.ipynb  discovery.ipynb  overview.ipynb  requirements.txt  tutorials.rst  vfb_datasets.ipynb  vfb_neurons.ipynb
docs/source/tutorials/.ipynb_checkpoints/: connectomics-checkpoint.ipynb  vfb_neurons-checkpoint.ipynb
resources/: VFB_TermInfo_queries.json
snippets/: NeuroFly24_scratch.ipynb  VFB_connect_Quick_Guide.ipynb
snippets/.ipynb_checkpoints/: VFB_connect_Quick_Guide-checkpoint.ipynb
src/: .gitignore
src/vfb_connect/: __init__.py  _fallback_version.py  _version.py  cross_server_tools.py  default_servers.py  setup.py
src/vfb_connect.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/vfb_connect/neo/: neo4j_tools.py  query_wrapper.py
src/vfb_connect/neo/test/: neo_tools_test.py  neo_tools_tests.py
src/vfb_connect/neo/test/resources/: so.json  vfb_ext.json
src/vfb_connect/owl/: owlery_query_tools.py
src/vfb_connect/owl/test/: query_tools_test.py
src/vfb_connect/resources/: VFB_TermInfo_queries.json  VFB_results_multi_input.json  VFB_results_single_input.json
src/vfb_connect/schema/: vfb_term.py
src/vfb_connect/schema/test/: vfb_term_query_test.py  vfb_term_test.py  vfb_term_tests.py
src/vfb_connect/test/: cross_server_tools_test.py
